--- a/client/src/index.css
+++ b/client/src/index.css
@@ -159,3 +159,37 @@ footer {
   width: 74%;
   padding: 40px;
 }
+
+/* Modal */
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.74);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  width: 600px;
+  padding: 35px;
+  border-radius: 16px;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+}
+
+.modal .close-icon {
+  float: right;
+  width: 20px;
+  height: 20px;
+  border-radius: 30px;
+  padding: 0 1px 2px 1px;
+  border: solid 1.5px rgb(150, 150, 150);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
